--- a/index.html
+++ b/index.html
@@ -7,33 +7,33 @@
 </head>
 <body>
 <pre>
-  <a href="/licenses/all.tar.gz">all licenses</a><br>
-  <a href="/licenses/afl-3.0">afl-3.0</a>
-  <a href="/licenses/agpl-3.0">agpl-3.0</a>
-  <a href="/licenses/apache-2.0">apache-2.0</a>
-  <a href="/licenses/artistic-2.0">artistic-2.0</a>
-  <a href="/licenses/bsd-2-clause">bsd-2-clause</a>
-  <a href="/licenses/bsd-3-clause">bsd-3-clause</a>
-  <a href="/licenses/bsd-3-clause-clear">bsd-3-clause-clear</a>
-  <a href="/licenses/cc0-1.0">cc0-1.0</a>
-  <a href="/licenses/cc-by-4.0">cc-by-4.0</a>
-  <a href="/licenses/cc-by-sa-4.0">cc-by-sa-4.0</a>
-  <a href="/licenses/epl-1.0">epl-1.0</a>
-  <a href="/licenses/eupl-1.1">eupl-1.1</a>
-  <a href="/licenses/gpl-2.0">gpl-2.0</a>
-  <a href="/licenses/gpl-3.0">gpl-3.0</a>
-  <a href="/licenses/isc">isc</a>
-  <a href="/licenses/lgpl-2.1">lgpl-2.1</a>
-  <a href="/licenses/lgpl-3.0">lgpl-3.0</a>
-  <a href="/licenses/lppl-1.3c">lppl-1.3c</a>
-  <a href="/licenses/mit">mit</a>
-  <a href="/licenses/mpl-2.0">mpl-2.0</a>
-  <a href="/licenses/ms-pl">ms-pl</a>
-  <a href="/licenses/ms-rl">ms-rl</a>
-  <a href="/licenses/ofl-1.1">ofl-1.1</a>
-  <a href="/licenses/osl-3.0">osl-3.0</a>
-  <a href="/licenses/unlicense">unlicense</a>
-  <a href="/licenses/wtfpl">wtfpl</a>
+  <a href="@/all.tar.gz">all licenses</a><br>
+  <a href="@/afl-3.0">afl-3.0</a>
+  <a href="@/agpl-3.0">agpl-3.0</a>
+  <a href="@/apache-2.0">apache-2.0</a>
+  <a href="@/artistic-2.0">artistic-2.0</a>
+  <a href="@/bsd-2-clause">bsd-2-clause</a>
+  <a href="@/bsd-3-clause">bsd-3-clause</a>
+  <a href="@/bsd-3-clause-clear">bsd-3-clause-clear</a>
+  <a href="@/cc0-1.0">cc0-1.0</a>
+  <a href="@/cc-by-4.0">cc-by-4.0</a>
+  <a href="@/cc-by-sa-4.0">cc-by-sa-4.0</a>
+  <a href="@/epl-1.0">epl-1.0</a>
+  <a href="@/eupl-1.1">eupl-1.1</a>
+  <a href="@/gpl-2.0">gpl-2.0</a>
+  <a href="@/gpl-3.0">gpl-3.0</a>
+  <a href="@/isc">isc</a>
+  <a href="@/lgpl-2.1">lgpl-2.1</a>
+  <a href="@/lgpl-3.0">lgpl-3.0</a>
+  <a href="@/lppl-1.3c">lppl-1.3c</a>
+  <a href="@/mit">mit</a>
+  <a href="@/mpl-2.0">mpl-2.0</a>
+  <a href="@/ms-pl">ms-pl</a>
+  <a href="@/ms-rl">ms-rl</a>
+  <a href="@/ofl-1.1">ofl-1.1</a>
+  <a href="@/osl-3.0">osl-3.0</a>
+  <a href="@/unlicense">unlicense</a>
+  <a href="@/wtfpl">wtfpl</a>
 </pre>
 </body>
 </html>
